samples/ingress/infrachk-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  name: ngx-service-ingress
  namespace: test
spec:
  ingressClassName: infra-nginx-ingctlr
  rules:
  - host: ngx-service.app.c3.dev.com
    http:
      paths:
      - backend:
          service:
            name: ngx-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ngx-service.app.c3.dev.com
    secretName: ngx-service-tls
